--- a/Ensek.API.IntegrationTests.csproj
+++ b/Ensek.API.IntegrationTests.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="SpecFlow.NUnit" Version="3.9.74" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ManualTests\" />
+  </ItemGroup>
+
 </Project>
